@@ -120,8 +120,13 @@ C<$options> is an optional hash respecting the following keys:
        auto_delete => $boolean, #default 1
      }
 
-This method returns the queuename delcared (important for retrieving
-the autogenerated queuename in the event that one was requested).
+In scalar context, this method returns the queuename delcared
+(important for retrieving the autogenerated queuename in the
+event that one was requested).
+
+In array context, this method returns three items: queuename,
+the number of message waiting on the queue, and the number
+of consumers bound to the queue.
 
 =item queue_bind($channel, $queuename, $exchange, $routing_key)
 
