@@ -1,3 +1,6 @@
+	* make queue_declare return message and consumer counts (additionally)
+		when called in array context.
+
 0.1.9 - Mon Feb 14 23:02:58 EST 2011
 	* add a basic return callback registration point
 	* add basic qos support
@@ -35,7 +38,8 @@
 
 0.1.1 - Mon Feb 22 12:32:57 EST 2010
 	* [rt.cpan.org #53800] make distclean removes files needed for build
-	* manually encode the 64bit delivery_tag to work croass platform for poorly configured perls (no 64bit ints)
+	* manually encode the 64bit delivery_tag to work croass platform for poorly
+		configured perls (no 64bit ints)
 	* add a get method (amqp_basic_get)
 
 0.1.0 - Sun Jan 17 09:49:07 EST 2010
